[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/draw_gd/src/UI/Timeline/LayerButton.gd" type="Script" id=1]
[ext_resource path="res://addons/draw_gd/assets/graphics/dark_themes/layers/layer_visible.png" type="Texture" id=2]
[ext_resource path="res://addons/draw_gd/assets/graphics/dark_themes/layers/unlock.png" type="Texture" id=3]
[ext_resource path="res://addons/draw_gd/assets/graphics/dark_themes/layers/unlinked_layer.png" type="Texture" id=4]
[ext_resource path="res://addons/draw_gd/src/UI/Timeline/CelButton.tscn" type="PackedScene" id=5]

[node name="LayerContainer" type="Button"]
margin_right = 262.0
margin_bottom = 36.0
rect_min_size = Vector2( 212, 36 )
size_flags_horizontal = 3
toggle_mode = true
action_mode = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CelButton" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_top = 0.0
margin_bottom = 36.0

[node name="EmptySpacer" type="Control" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 36.0

[node name="LayerButtons" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 148.0
margin_bottom = 36.0

[node name="VisibilityButton" type="Button" parent="HBoxContainer/LayerButtons" groups=[
"UIButtons",
]]
margin_top = 2.0
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Toggle layer's visibility"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/LayerButtons/VisibilityButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/LayerButtons/VisibilityButton/CenterContainer"]
margin_left = 4.0
margin_top = 9.0
margin_right = 28.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockButton" type="Button" parent="HBoxContainer/LayerButtons" groups=[
"UIButtons",
]]
margin_left = 36.0
margin_top = 2.0
margin_right = 68.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Lock/unlock layer"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/LayerButtons/LockButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/LayerButtons/LockButton/CenterContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 26.0
margin_bottom = 28.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="Button" parent="HBoxContainer/LayerButtons" groups=[
"UIButtons",
]]
margin_left = 72.0
margin_top = 2.0
margin_right = 104.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Enable/disable cel linking

Linked cels are being shared across multiple frames"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/LayerButtons/LinkButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/LayerButtons/LinkButton/CenterContainer"]
margin_left = 4.0
margin_top = 12.0
margin_right = 28.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerName" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 152.0
margin_right = 256.0
margin_bottom = 36.0
rect_min_size = Vector2( 104, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/LayerName"]
margin_top = 11.0
margin_right = 104.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Layer 0"
align = 1
clip_text = true

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/LayerName"]
visible = false
margin_left = 24.0
margin_top = 2.0
margin_right = 104.0
margin_bottom = 34.0
rect_min_size = Vector2( 80, 32 )
size_flags_vertical = 4
text = "Layer 0"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[connection signal="pressed" from="." to="." method="_on_LayerContainer_pressed"]
[connection signal="pressed" from="HBoxContainer/CelButton" to="." method="_on_CelButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LayerButtons/VisibilityButton" to="." method="_on_VisibilityButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LayerButtons/LockButton" to="." method="_on_LockButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LayerButtons/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="focus_exited" from="HBoxContainer/LayerName/LineEdit" to="." method="_on_LineEdit_focus_exited"]
